--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -22,7 +22,7 @@
         <div class="col-md-3 left_col menu_fixed">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-briefcase"></i> <span>Site Ériko!</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-briefcase"></i> <span>Site BrunoLima!</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -30,11 +30,11 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <%= image_tag 'eriko.jpg', alt:"...", class:"img-circle profile_img" %>
+                <%= image_tag 'bruno.png', alt:"...", class:"img-circle profile_img" %>
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>Ériko Sampaio</h2>
+                <h2>Bruno Lima</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -175,7 +175,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <%= image_tag 'img.jpg', alt:"" %>
+                    <%= image_tag 'bruno.png', alt:"" %>
                     <%= current_user.email %>
                     <span class=" fa fa-angle-down"></span>
                   </a>
@@ -197,7 +197,7 @@
                     <li>
                       <a>
                         <span class="image">
-                          <%= image_tag 'eriko.jpg', alt:"Profile Image" %>
+                          <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
                           <span>Ériko Sampaio</span>
@@ -211,7 +211,7 @@
                     <li>
                       <a>
                         <span class="image">
-                        <%= image_tag 'eriko.jpg', alt:"Profile Image" %>
+                        <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
                           <span>Ériko Sampaio</span>
@@ -225,7 +225,7 @@
                     <li>
                       <a>
                         <span class="image">
-                        <%= image_tag 'eriko.jpg', alt:"Profile Image" %>
+                        <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
                           <span>Ériko Sampaio</span>
@@ -239,7 +239,7 @@
                     <li>
                       <a>
                         <span class="image">
-                        <%= image_tag 'eriko.jpg', alt:"Profile Image" %>
+                        <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
                           <span>Ériko Sampaio</span>
