--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Editando</h1>
-<%= @admin.inspect %>
+<div class="col-lg-12">
+  <h1 class="page-header">Editando</h1>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Basic Form Elements
+  </div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-lg-6">
+        <form role="form">
+          <div class="form-group">
+            <label>Email</label>
+            <input class="form-control" placeholder="Enter email">
+          </div>
+
+          <div class="form-group">
+            <label>Senha</label>
+            <input class="form-control" placeholder="Enter Senha">
+          </div>
+
+          <div class="form-group">
+            <label>Confirmar Senha</label>
+            <input class="form-control" placeholder="Enter Senha">
+          </div>
+          <button type="submit" class="btn btn-success">Submit Button</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
