--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listando Administradores</h1>
+<div class="col-lg-12">
+  <h1 class="page-header">Listando Administradores</h1>
+</div>
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
