--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -1,30 +1,48 @@
 <div class="col-lg-12">
   <h1 class="page-header">Editando</h1>
 </div>
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Basic Form Elements
-  </div>
-  <div class="panel-body">
-    <div class="row">
-      <div class="col-lg-6">
-        <form role="form">
-          <div class="form-group">
-            <label>Email</label>
-            <input class="form-control" placeholder="Enter email">
-          </div>
 
-          <div class="form-group">
-            <label>Senha</label>
-            <input class="form-control" placeholder="Enter Senha">
-          </div>
+<div class="row">
+  <% if @admin.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+      <ul>
+        <% @admin.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-          <div class="form-group">
-            <label>Confirmar Senha</label>
-            <input class="form-control" placeholder="Enter Senha">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Editando Administrador
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-6">
+            <%= form_with(model: [:admins_backoffice, @admin ], local: true ) do |form | %>
+
+              <div class="form-group">
+                <%= form.label :email %>
+                <%= form.text_field :email, class:"form-control", placeholder:"Email do Administrador" %>
+              </div>
+
+              <div class="form-group">
+                <%= form.label :password %>
+                <%= form.text_field :password, class:"form-control", placeholder: "Senha"  %>
+              </div>
+
+              <div class="form-group">
+                <%= form.label :password_confirmation %>
+                <%= form.text_field :password_confirmation, class:"form-control", placeholder: "Confime sua senha" %>
+              </div>
+
+              <button type="submit" class="btn btn-success">Salvar</button>
+            <% end %>
           </div>
-          <button type="submit" class="btn btn-success">Submit Button</button>
-        </form>
+        </div>
       </div>
     </div>
   </div>
