--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -5,9 +5,13 @@
   <table class="table table-striped table-bordered table-hover">
     <thead>
     <tr>
-      <th>ID</th>
+      <th>#</th>
       <th>Email</th>
-      <th></th>
+      <th>
+        <%= link_to new_admins_backoffice_admin_path, class:"btn btn-success btn-circle" do %>
+          <i class="fa fa-plus"></i>
+        <% end %>
+      </th>
     </tr>
     </thead>
     <tbody>
@@ -26,7 +30,7 @@
             </button>
           </td>
         </tr>
-    <% end %>
+      <% end %>
     </tbody>
   </table>
 </div>
