--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -24,81 +24,98 @@
 
 </head>
 
-<body>
+  <body>
 
-<div id="wrapper">
-  <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html" style="color: #1d8dc9; border: 1px solid" ><strong>Backoffice Adminstrativo</strong></a>
-    </div>
-    <!-- /.navbar-header -->
-
-    <ul class="nav navbar-top-links navbar-right">
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-          <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-        </a>
-        <ul class="dropdown-menu dropdown-user">
-          <li>
-            <%= link_to destroy_admin_session_path, method: :delete do %>
-              <i class="fa fa-sign-out fa-fw"></i> Sair
-            <% end %>
-          </li>
-        </ul>
-        <!-- /.dropdown-user -->
-      </li>
-      <!-- /.dropdown -->
-    </ul>
-    <!-- /.navbar-top-links -->
-
-    <div class="navbar-default sidebar" role="navigation">
-      <div class="sidebar-nav navbar-collapse">
-        <ul class="nav" id="side-menu">
-          <li>
-            <%= link_to admins_backoffice_welcome_index_path do %>
-              <i class="fa fa-dashboard fa-fw"></i> Dashboard
-            <% end %>
-          </li>
-
-          <li>
-            <%= link_to admins_backoffice_admins_path do %>
-              <i class="fa fa-users fa-fw"></i> Administradores
-            <% end%>
-          </li>
-        </ul>
+  <div id="wrapper">
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html" style="color: #1d8dc9; border: 1px solid" ><strong>Backoffice Adminstrativo</strong></a>
       </div>
-      <!-- /.sidebar-collapse -->
-    </div>
-    <!-- /.navbar-static-side -->
-  </nav>
+      <!-- /.navbar-header -->
 
-  <!-- Page Content -->
-  <div id="page-wrapper">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <%= yield %>
+      <ul class="nav navbar-top-links navbar-right">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-user">
+            <li>
+              <%= link_to destroy_admin_session_path, method: :delete do %>
+                <i class="fa fa-sign-out fa-fw"></i> Sair
+              <% end %>
+            </li>
+            <li><%= current_admin.email %></li>
+          </ul>
+          <!-- /.dropdown-user -->
+        </li>
+        <!-- /.dropdown -->
+      </ul>
+      <!-- /.navbar-top-links -->
+
+      <div class="navbar-default sidebar" role="navigation">
+        <div class="sidebar-nav navbar-collapse">
+          <ul class="nav" id="side-menu">
+            <li>
+              <%= link_to admins_backoffice_welcome_index_path do %>
+                <i class="fa fa-dashboard fa-fw"></i> Dashboard
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to admins_backoffice_admins_path do %>
+                <i class="fa fa-users fa-fw"></i> Administradores
+              <% end%>
+            </li>
+          </ul>
         </div>
-        <!-- /.col-lg-12 -->
+        <!-- /.sidebar-collapse -->
       </div>
-      <!-- /.row -->
+      <!-- /.navbar-static-side -->
+    </nav>
+
+    <!-- Page Content -->
+    <div id="page-wrapper">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12">
+            <%= yield %>
+          </div>
+          <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
     </div>
-    <!-- /.container-fluid -->
+    <!-- /#page-wrapper -->
+
   </div>
-  <!-- /#page-wrapper -->
+  <!-- /#wrapper -->
 
-</div>
-<!-- /#wrapper -->
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'admins_backoffice' %>
 
-<%= javascript_include_tag 'application' %>
-<%= javascript_include_tag 'admins_backoffice' %>
+  <!---Central de Notificação-->
+  <% if notice %>
+    <%= javascript_tag do %>
+      $.bootstrapGrowl("<%= notice %>", {
+          //ele: 'body', // which element to append to
+          type: 'success', // (null, 'info', 'danger', 'success')
+          //offset: {from: 'top', amount: 20}, // 'top', or 'bottom'
+          align: 'right', // ('left', 'right', or 'center')
+          //width: 250, // (integer, or 'auto')
+          //delay: 4000, // Time while the message will be displayed. It's not equivalent to the *demo* timeOut!
+          allow_dismiss: true, // If true then will display a cross to close the popup.
+          stackup_spacing: 10 // spacing between consecutively stacked growls.
+      });
+    <% end %>
+  <% end %>
 </body>
 
 </html>
