--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -25,9 +25,10 @@
               <i class="fa fa-edit"></i>
             <% end %>
 
-            <button type="button" class="btn btn-danger btn-circle">
+            <%= link_to admins_backoffice_admin_path(admin.id), method: :delete, class:"btn btn-danger btn-circle",
+                        data: {confirm: "Você deseja realmente excluir esse Administrador?"} do %>
               <i class="fa fa-minus"></i>
-            </button>
+            <% end %>
           </td>
         </tr>
       <% end %>
