--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -55,22 +55,30 @@
       <div class="navbar-default sidebar" role="navigation">
         <div class="sidebar-nav navbar-collapse">
           <ul class="nav" id="side-menu">
+
             <li>
               <%= link_to admins_backoffice_welcome_index_path do %>
                 <i class="fa fa-dashboard fa-fw"></i> Dashboard
               <% end %>
             </li>
+
             <li>
               <%= link_to admins_backoffice_admins_path do %>
-                <i class="fa fa-users fa-fw"></i> Administradores
+                <i class="fa fa-users fa-fw"></i> Administradoresx
               <% end%>
             </li>
+
+            <li>
+              <%= link_to '#' do %>
+                <i class="fa fa-users fa-fw"></i> Assuntos/Áreas
+              <% end%>
+            </li>
+
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Page Content -->
     <div id="page-wrapper">
       <div class="container-fluid">
         <div class="row">
