--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -64,12 +64,12 @@
 
             <li>
               <%= link_to admins_backoffice_admins_path do %>
-                <i class="fa fa-users fa-fw"></i> Administradoresx
+                <i class="fa fa-users fa-fw"></i> Administradores
               <% end%>
             </li>
 
             <li>
-              <%= link_to '#' do %>
+              <%= link_to admins_backoffice_subjects_path do %>
                 <i class="fa fa-users fa-fw"></i> Assuntos/Áreas
               <% end%>
             </li>
