--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>#</th>
       <th>Descrição</th>
+      <th>Assunto</th>
       <th>
         <%= link_to new_admins_backoffice_question_path, class:"btn btn-success btn-circle" do %>
           <i class="fa fa-plus"></i>
@@ -18,7 +19,8 @@
       <% @questions.each do |question| %>
         <tr>
           <td><%= question.id %></td>
-          <td><%= question.description %></td>
+          <td><%= question.description.truncate(63) %></td>
+          <td><%= question.subject.description %></td>
           <td style="width: 100px">
 
             <%= link_to edit_admins_backoffice_question_path(question), class:"btn btn-primary btn-circle" do %>
