--- a/app/views/admins_backoffice/questions/shared/_form.html.erb
+++ b/app/views/admins_backoffice/questions/shared/_form.html.erb
@@ -3,11 +3,11 @@
 </div>
 
 <div class="row">
-  <% if @subject.errors.any? %>
+  <% if @question.errors.any? %>
     <div class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
       <ul>
-        <% @subject.errors.full_messages.each do |message| %>
+        <% @question.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
@@ -16,17 +16,22 @@
 
   <div class="col-lg-12">
     <div class="panel panel-default">
-      <div class="panel-heading">
-        <%= "#{action_message} Assuto/Área" %>
+      <div class="panel-heading" style="background-color: #4B98ED; color: #FBFBFB">
+        <%= "#{action_message} Pergunta"%>
       </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-lg-6">
-            <%= form_with(model: [:admins_backoffice, @subject ], local: true ) do |form | %>
+            <%= form_with(model: [:admins_backoffice, @question ], local: true ) do |form | %>
 
               <div class="form-group">
                 <%= form.label :description %>
-                <%= form.text_field :description, class:"form-control", placeholder:"Descrição do Assunto/Área" %>
+                <%= form.text_area :description, class:"form-control", placeholder:"Descrição da Pergunta", rows: 5 %>
+              </div>
+
+              <div class="form-group" style="background-color:  #E1E8E8">
+                <%= form.label :subject_id %>
+                <%= form.collection_select(:subject_id, Subject.all, :id, :description, {}, {class:"form-control"}) %>
               </div>
 
               <button type="submit" class="btn btn-success">Salvar</button>
