--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-lg-12">
-  <h1 class="page-header">Listando Assuntos/Áreas</h1>
+  <h1 class="page-header">Listando Assuntos</h1>
 </div>
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
