--- a/app/views/admins_backoffice/subjects/shared/_form.html.erb
+++ b/app/views/admins_backoffice/subjects/shared/_form.html.erb
@@ -17,7 +17,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <%= "#{action_message} Assuto/Área" %>
+        <%= "#{action_message} Assutos" %>
       </div>
       <div class="panel-body">
         <div class="row">
@@ -26,7 +26,7 @@
 
               <div class="form-group">
                 <%= form.label :description %>
-                <%= form.text_field :description, class:"form-control", placeholder:"Descrição do Assunto/Área" %>
+                <%= form.text_field :description, class:"form-control", placeholder:"Descrição do Assuntos" %>
               </div>
 
               <button type="submit" class="btn btn-success">Salvar</button>
