adiciono texto dinamico em index, admim subject e question

--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-BR">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -200,7 +200,7 @@
                           <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
-                          <span>Ériko Sampaio</span>
+                          <span>BrunoLima</span>
                           <span class="time">3 mins ago</span>
                         </span>
                         <span class="message">
@@ -214,7 +214,7 @@
                         <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
-                          <span>Ériko Sampaio</span>
+                          <span>BrunoLima</span>
                           <span class="time">3 mins ago</span>
                         </span>
                         <span class="message">
@@ -228,7 +228,7 @@
                         <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
-                          <span>Ériko Sampaio</span>
+                          <span>BrunoLima</span>
                           <span class="time">3 mins ago</span>
                         </span>
                         <span class="message">
@@ -242,7 +242,7 @@
                         <%= image_tag 'bruno.png', alt:"Profile Image" %>
                         </span>
                         <span>
-                          <span>Ériko Sampaio</span>
+                          <span>BrunoLima</span>
                           <span class="time">3 mins ago</span>
                         </span>
                         <span class="message">
