--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-lg-12">
-  <h1 class="page-header">Listando Assuntos</h1>
+  <h1 class="page-header"><%= t('messages.listing', model: @subjects.model_name.human(count: 2)) %></h1>
 </div>
-<div class="table-responsive">
+<div class="table-responsive">Listando Assuntos
   <table class="table table-striped table-bordered table-hover">
     <thead>
     <tr>
@@ -26,7 +26,7 @@
             <% end %>
 
             <%= link_to admins_backoffice_subject_path(subject.id), method: :delete, class:"btn btn-danger btn-circle",
-                        data: {confirm: "Você deseja realmente excluir esse Assuntos/Área?"} do %>
+                        data: {confirm: t('messages.confirm_with', item: subject.description.truncate(22))} do %>
               <i class="fa fa-minus"></i>
             <% end %>
           </td>
