--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-lg-12">
-  <h1 class="page-header"><%= t('messages.listing', model: @subjects.model_name.human(count: 2)) %></h1>
+  <h1 class="page-header"><%= t('message.listing', model: @subjects.model_name.human(count: 2)) %></h1>
 </div>
-<div class="table-responsive">Listando Assuntos
+<div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
     <tr>
