--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -26,7 +26,7 @@
             <% end %>
 
             <%= link_to admins_backoffice_subject_path(subject.id), method: :delete, class:"btn btn-danger btn-circle",
-                        data: {confirm: t('messages.confirm_with', item: subject.description.truncate(22))} do %>
+                        data: {confirm: t('message.confirm_with', item: subject.description.truncate(22))} do %>
               <i class="fa fa-minus"></i>
             <% end %>
           </td>
